週次リサーチワークフローの設定を更新し、Node.jsのセットアップを追加。Tavilyサーバーのコマンドと環境変数を定義し、ドキュメントを日本語で記述するように変更。

--- a/.github/workflows/weekly-research.lock.yml
+++ b/.github/workflows/weekly-research.lock.yml
@@ -5,7 +5,7 @@
 #
 # Source: githubnext/agentics/workflows/weekly-research.md@049b826c4a2bb11aa8fd40648bc4a5956f432d1c
 #
-# Effective stop-time: 2025-11-17 02:23:20
+# Effective stop-time: 2025-11-17 02:48:58
 #
 # Job Dependency Graph:
 # ```mermaid
@@ -75,6 +75,10 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v5
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '24'
       - name: Create gh-aw temp directory
         run: |
           mkdir -p /tmp/gh-aw/agent
@@ -143,7 +147,6 @@ jobs:
         run: |
           set -e
           docker pull ghcr.io/github/github-mcp-server:v0.18.0
-          docker pull mcp/fetch
       - name: Setup Safe Outputs Collector MCP
         run: |
           mkdir -p /tmp/gh-aw/safe-outputs
@@ -922,15 +925,20 @@ jobs:
                   "GITHUB_AW_ASSETS_ALLOWED_EXTS": "\${GITHUB_AW_ASSETS_ALLOWED_EXTS}"
                 }
               },
-              "web-fetch": {
-                "command": "docker",
-                "args": [
-                  "run",
-                  "-i",
-                  "--rm",
-                  "mcp/fetch"
+              "tavily": {
+                "type": "local",
+                "command": "npx",
+                "tools": [
+                  "search",
+                  "search_news"
                 ],
-                "tools": ["*"]
+                "args": [
+                  "-y",
+                  "@tavily/mcp-server"
+                ],
+                "env": {
+                  "TAVILY_API_KEY": "${{ secrets.TAVILY_API_KEY }}"
+                }
               }
             }
           }
@@ -950,7 +958,7 @@ jobs:
           mkdir -p $(dirname "$GITHUB_AW_PROMPT")
           cat > $GITHUB_AW_PROMPT << 'EOF'
           # Weekly Research
-          
+          THI DOCS MUST WRITE IN JAPANESE
           ## Job Description
           
           Do a deep research investigation in ${{ github.repository }} repository, and the related industry in general.
@@ -1224,12 +1232,14 @@ jobs:
         # --allow-tool github(search_repositories)
         # --allow-tool github(search_users)
         # --allow-tool safe_outputs
-        # --allow-tool web-fetch
+        # --allow-tool tavily
+        # --allow-tool tavily(search)
+        # --allow-tool tavily(search_news)
         timeout-minutes: 15
         run: |
           set -o pipefail
           COPILOT_CLI_INSTRUCTION=$(cat /tmp/gh-aw/aw-prompts/prompt.txt)
-          copilot --add-dir /tmp/gh-aw/ --log-level all --log-dir /tmp/gh-aw/.copilot/logs/ --allow-tool 'github(download_workflow_run_artifact)' --allow-tool 'github(get_code_scanning_alert)' --allow-tool 'github(get_commit)' --allow-tool 'github(get_dependabot_alert)' --allow-tool 'github(get_discussion)' --allow-tool 'github(get_discussion_comments)' --allow-tool 'github(get_file_contents)' --allow-tool 'github(get_issue)' --allow-tool 'github(get_issue_comments)' --allow-tool 'github(get_job_logs)' --allow-tool 'github(get_label)' --allow-tool 'github(get_latest_release)' --allow-tool 'github(get_me)' --allow-tool 'github(get_notification_details)' --allow-tool 'github(get_pull_request)' --allow-tool 'github(get_pull_request_comments)' --allow-tool 'github(get_pull_request_diff)' --allow-tool 'github(get_pull_request_files)' --allow-tool 'github(get_pull_request_review_comments)' --allow-tool 'github(get_pull_request_reviews)' --allow-tool 'github(get_pull_request_status)' --allow-tool 'github(get_release_by_tag)' --allow-tool 'github(get_secret_scanning_alert)' --allow-tool 'github(get_tag)' --allow-tool 'github(get_workflow_run)' --allow-tool 'github(get_workflow_run_logs)' --allow-tool 'github(get_workflow_run_usage)' --allow-tool 'github(list_branches)' --allow-tool 'github(list_code_scanning_alerts)' --allow-tool 'github(list_commits)' --allow-tool 'github(list_dependabot_alerts)' --allow-tool 'github(list_discussion_categories)' --allow-tool 'github(list_discussions)' --allow-tool 'github(list_issue_types)' --allow-tool 'github(list_issues)' --allow-tool 'github(list_label)' --allow-tool 'github(list_notifications)' --allow-tool 'github(list_pull_requests)' --allow-tool 'github(list_releases)' --allow-tool 'github(list_secret_scanning_alerts)' --allow-tool 'github(list_starred_repositories)' --allow-tool 'github(list_sub_issues)' --allow-tool 'github(list_tags)' --allow-tool 'github(list_workflow_jobs)' --allow-tool 'github(list_workflow_run_artifacts)' --allow-tool 'github(list_workflow_runs)' --allow-tool 'github(list_workflows)' --allow-tool 'github(pull_request_read)' --allow-tool 'github(search_code)' --allow-tool 'github(search_issues)' --allow-tool 'github(search_orgs)' --allow-tool 'github(search_pull_requests)' --allow-tool 'github(search_repositories)' --allow-tool 'github(search_users)' --allow-tool safe_outputs --allow-tool web-fetch --prompt "$COPILOT_CLI_INSTRUCTION" 2>&1 | tee /tmp/gh-aw/agent-stdio.log
+          copilot --add-dir /tmp/gh-aw/ --log-level all --log-dir /tmp/gh-aw/.copilot/logs/ --allow-tool 'github(download_workflow_run_artifact)' --allow-tool 'github(get_code_scanning_alert)' --allow-tool 'github(get_commit)' --allow-tool 'github(get_dependabot_alert)' --allow-tool 'github(get_discussion)' --allow-tool 'github(get_discussion_comments)' --allow-tool 'github(get_file_contents)' --allow-tool 'github(get_issue)' --allow-tool 'github(get_issue_comments)' --allow-tool 'github(get_job_logs)' --allow-tool 'github(get_label)' --allow-tool 'github(get_latest_release)' --allow-tool 'github(get_me)' --allow-tool 'github(get_notification_details)' --allow-tool 'github(get_pull_request)' --allow-tool 'github(get_pull_request_comments)' --allow-tool 'github(get_pull_request_diff)' --allow-tool 'github(get_pull_request_files)' --allow-tool 'github(get_pull_request_review_comments)' --allow-tool 'github(get_pull_request_reviews)' --allow-tool 'github(get_pull_request_status)' --allow-tool 'github(get_release_by_tag)' --allow-tool 'github(get_secret_scanning_alert)' --allow-tool 'github(get_tag)' --allow-tool 'github(get_workflow_run)' --allow-tool 'github(get_workflow_run_logs)' --allow-tool 'github(get_workflow_run_usage)' --allow-tool 'github(list_branches)' --allow-tool 'github(list_code_scanning_alerts)' --allow-tool 'github(list_commits)' --allow-tool 'github(list_dependabot_alerts)' --allow-tool 'github(list_discussion_categories)' --allow-tool 'github(list_discussions)' --allow-tool 'github(list_issue_types)' --allow-tool 'github(list_issues)' --allow-tool 'github(list_label)' --allow-tool 'github(list_notifications)' --allow-tool 'github(list_pull_requests)' --allow-tool 'github(list_releases)' --allow-tool 'github(list_secret_scanning_alerts)' --allow-tool 'github(list_starred_repositories)' --allow-tool 'github(list_sub_issues)' --allow-tool 'github(list_tags)' --allow-tool 'github(list_workflow_jobs)' --allow-tool 'github(list_workflow_run_artifacts)' --allow-tool 'github(list_workflow_runs)' --allow-tool 'github(list_workflows)' --allow-tool 'github(pull_request_read)' --allow-tool 'github(search_code)' --allow-tool 'github(search_issues)' --allow-tool 'github(search_orgs)' --allow-tool 'github(search_pull_requests)' --allow-tool 'github(search_repositories)' --allow-tool 'github(search_users)' --allow-tool safe_outputs --allow-tool tavily --allow-tool 'tavily(search)' --allow-tool 'tavily(search_news)' --prompt "$COPILOT_CLI_INSTRUCTION" 2>&1 | tee /tmp/gh-aw/agent-stdio.log
         env:
           COPILOT_AGENT_RUNNER_TYPE: STANDALONE
           GITHUB_AW_MCP_CONFIG: /home/runner/.copilot/mcp-config.json
@@ -2161,10 +2171,11 @@ jobs:
             await main();
 
         env:
-          GITHUB_AW_SECRET_NAMES: 'COPILOT_CLI_TOKEN,GH_AW_GITHUB_TOKEN,GITHUB_TOKEN'
+          GITHUB_AW_SECRET_NAMES: 'COPILOT_CLI_TOKEN,GH_AW_GITHUB_TOKEN,GITHUB_TOKEN,TAVILY_API_KEY'
           SECRET_COPILOT_CLI_TOKEN: ${{ secrets.COPILOT_CLI_TOKEN }}
           SECRET_GH_AW_GITHUB_TOKEN: ${{ secrets.GH_AW_GITHUB_TOKEN }}
           SECRET_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SECRET_TAVILY_API_KEY: ${{ secrets.TAVILY_API_KEY }}
       - name: Upload engine output files
         uses: actions/upload-artifact@v4
         with:
@@ -3427,7 +3438,7 @@ jobs:
         env:
           WORKFLOW_NAME: "Weekly Research"
           WORKFLOW_DESCRIPTION: "No description provided"
-          WORKFLOW_MARKDOWN: "# Weekly Research\n\n## Job Description\n\nDo a deep research investigation in ${{ github.repository }} repository, and the related industry in general.\n\n- Read selections of the latest code, issues and PRs for this repo.\n- Read latest trends and news from the software industry news source on the Web.\n\nCreate a new GitHub discussion with title starting with \"${{ github.workflow }}\" containing a markdown report with\n\n- Interesting news about the area related to this software project.\n- Related products and competitive analysis\n- Related research papers\n- New ideas\n- Market opportunities\n- Business analysis\n- Enjoyable anecdotes\n\nOnly a new discussion should be created, no existing discussions should be adjusted.\n\nAt the end of the report list write a collapsed section with the following:\n- All search queries (web, issues, pulls, content) you used\n- All bash commands you executed\n- All MCP tools you used\n"
+          WORKFLOW_MARKDOWN: "# Weekly Research\nTHI DOCS MUST WRITE IN JAPANESE\n## Job Description\n\nDo a deep research investigation in ${{ github.repository }} repository, and the related industry in general.\n\n- Read selections of the latest code, issues and PRs for this repo.\n- Read latest trends and news from the software industry news source on the Web.\n\nCreate a new GitHub discussion with title starting with \"${{ github.workflow }}\" containing a markdown report with\n\n- Interesting news about the area related to this software project.\n- Related products and competitive analysis\n- Related research papers\n- New ideas\n- Market opportunities\n- Business analysis\n- Enjoyable anecdotes\n\nOnly a new discussion should be created, no existing discussions should be adjusted.\n\nAt the end of the report list write a collapsed section with the following:\n- All search queries (web, issues, pulls, content) you used\n- All bash commands you executed\n- All MCP tools you used\n"
         with:
           script: |
             const fs = require('fs');
@@ -3816,7 +3827,7 @@ jobs:
         id: check_stop_time
         uses: actions/github-script@v8
         env:
-          GITHUB_AW_STOP_TIME: 2025-11-17 02:23:20
+          GITHUB_AW_STOP_TIME: 2025-11-17 02:48:58
           GITHUB_AW_WORKFLOW_NAME: "Weekly Research"
         with:
           script: |
