Update permissions in changelog workflow to allow write access for contents

--- a/.github/workflows/github-changelog-report.lock.yml
+++ b/.github/workflows/github-changelog-report.lock.yml
@@ -58,7 +58,7 @@ jobs:
     needs: activation
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
       issues: write
       pull-requests: write
     concurrency:
