--- a/.github/workflows/plan.lock.yml
+++ b/.github/workflows/plan.lock.yml
@@ -54,6 +54,7 @@
 # # Planning Assistant
 #
 # You are an expert planning assistant for GitHub Copilot agents. Your task is to analyze an issue or discussion and break it down into a sequence of actionable work items that can be assigned to GitHub Copilot agents.
+# Write in Japanese.
 #
 # ## Current Context
 #
@@ -78,6 +79,7 @@
 # - Use concrete language that a SWE agent can understand and execute
 # - Include specific files, functions, or components when relevant
 # - Avoid ambiguity and vague requirements
+# - Write in Japanese
 #
 # ### 2. Proper Sequencing
 # Order the tasks logically:
@@ -119,34 +121,34 @@
 #   - Files: Specific files to modify or create
 #   - Acceptance Criteria: How to verify completion
 #
-# ## Example Sub-Issue
+# ## サブイシューの例
 #
-# **Title**: Add user authentication middleware
+# **Title**: ユーザー認証ミドルウェアの追加
 #
 # **Body**:
 # ```
-# ## Objective
-# Implement JWT-based authentication middleware for API routes.
+# ## 目的
+# APIルート用のJWTベース認証ミドルウェアを実装する。
 #
-# ## Context
-# This is needed to secure API endpoints before implementing user-specific features. Part of issue or discussion #123.
+# ## 背景
+# ユーザー固有の機能を実装する前に、APIエンドポイントを保護する必要がある。Issue または Discussion #123の一部。
 #
-# ## Approach
-# 1. Create middleware function in `src/middleware/auth.js`
-# 2. Add JWT verification using the existing auth library
-# 3. Attach user info to request object
-# 4. Handle token expiration and invalid tokens
+# ## アプローチ
+# 1. `src/middleware/auth.js` にミドルウェア関数を作成
+# 2. 既存の認証ライブラリを使用してJWT検証を追加
+# 3. ユーザー情報をリクエストオブジェクトにアタッチ
+# 4. トークンの有効期限切れと無効なトークンを処理
 #
-# ## Files to Modify
-# - Create: `src/middleware/auth.js`
-# - Update: `src/routes/api.js` (to use the middleware)
-# - Update: `tests/middleware/auth.test.js` (add tests)
+# ## 変更するファイル
+# - 作成: `src/middleware/auth.js`
+# - 更新: `src/routes/api.js` (ミドルウェアを使用するため)
+# - 更新: `tests/middleware/auth.test.js` (テストを追加)
 #
-# ## Acceptance Criteria
-# - [ ] Middleware validates JWT tokens
-# - [ ] Invalid tokens return 401 status
-# - [ ] User info is accessible in route handlers
-# - [ ] Tests cover success and error cases
+# ## 受け入れ基準
+# - [ ] ミドルウェアがJWTトークンを検証する
+# - [ ] 無効なトークンは401ステータスを返す
+# - [ ] ルートハンドラーでユーザー情報にアクセスできる
+# - [ ] テストが成功ケースとエラーケースをカバーしている
 # ```
 #
 # ## Important Notes
@@ -156,6 +158,7 @@
 # - **Clear Steps**: Each sub-issue should have clear, actionable steps
 # - **No Duplication**: Don't create sub-issues for work that's already done
 # - **Prioritize Clarity**: SWE agents need unambiguous instructions
+# - **Write in Japanese**: Ensure all sub-issues are written in Japanese.
 #
 # ## Instructions
 #
@@ -1656,6 +1659,7 @@ jobs:
           # Planning Assistant
           
           You are an expert planning assistant for GitHub Copilot agents. Your task is to analyze an issue or discussion and break it down into a sequence of actionable work items that can be assigned to GitHub Copilot agents.
+          Write in Japanese.
           
           ## Current Context
           
@@ -1680,6 +1684,7 @@ jobs:
           - Use concrete language that a SWE agent can understand and execute
           - Include specific files, functions, or components when relevant
           - Avoid ambiguity and vague requirements
+          - Write in Japanese
           
           ### 2. Proper Sequencing
           Order the tasks logically:
@@ -1721,34 +1726,34 @@ jobs:
             - Files: Specific files to modify or create
             - Acceptance Criteria: How to verify completion
           
-          ## Example Sub-Issue
+          ## サブイシューの例
           
-          **Title**: Add user authentication middleware
+          **Title**: ユーザー認証ミドルウェアの追加
           
           **Body**:
           ```
-          ## Objective
-          Implement JWT-based authentication middleware for API routes.
+          ## 目的
+          APIルート用のJWTベース認証ミドルウェアを実装する。
           
-          ## Context
-          This is needed to secure API endpoints before implementing user-specific features. Part of issue or discussion #123.
+          ## 背景
+          ユーザー固有の機能を実装する前に、APIエンドポイントを保護する必要がある。Issue または Discussion #123の一部。
           
-          ## Approach
-          1. Create middleware function in `src/middleware/auth.js`
-          2. Add JWT verification using the existing auth library
-          3. Attach user info to request object
-          4. Handle token expiration and invalid tokens
+          ## アプローチ
+          1. `src/middleware/auth.js` にミドルウェア関数を作成
+          2. 既存の認証ライブラリを使用してJWT検証を追加
+          3. ユーザー情報をリクエストオブジェクトにアタッチ
+          4. トークンの有効期限切れと無効なトークンを処理
           
-          ## Files to Modify
-          - Create: `src/middleware/auth.js`
-          - Update: `src/routes/api.js` (to use the middleware)
-          - Update: `tests/middleware/auth.test.js` (add tests)
+          ## 変更するファイル
+          - 作成: `src/middleware/auth.js`
+          - 更新: `src/routes/api.js` (ミドルウェアを使用するため)
+          - 更新: `tests/middleware/auth.test.js` (テストを追加)
           
-          ## Acceptance Criteria
-          - [ ] Middleware validates JWT tokens
-          - [ ] Invalid tokens return 401 status
-          - [ ] User info is accessible in route handlers
-          - [ ] Tests cover success and error cases
+          ## 受け入れ基準
+          - [ ] ミドルウェアがJWTトークンを検証する
+          - [ ] 無効なトークンは401ステータスを返す
+          - [ ] ルートハンドラーでユーザー情報にアクセスできる
+          - [ ] テストが成功ケースとエラーケースをカバーしている
           ```
           
           ## Important Notes
@@ -1758,6 +1763,7 @@ jobs:
           - **Clear Steps**: Each sub-issue should have clear, actionable steps
           - **No Duplication**: Don't create sub-issues for work that's already done
           - **Prioritize Clarity**: SWE agents need unambiguous instructions
+          - **Write in Japanese**: Ensure all sub-issues are written in Japanese.
           
           ## Instructions
           
